# Yolov9-Ncnn

./: README.md
model/: yolov9-c-converted-sim.param  yolov9-c-converted-sim.xml
yolov9-ncnn/: CMakeLists.txt  README.md  yolov9.cpp
yolov9-ncnn-android/: README.md  local.properties
yolov9-ncnn-android/app/: build.gradle
yolov9-ncnn-android/app/src/main/: AndroidManifest.xml
yolov9-ncnn-android/app/src/main/java/com/tencent/yolov9ncnn/: MainActivity.java  YoloV9Ncnn.java
yolov9-ncnn-android/app/src/main/jni/: CMakeLists.txt  yolov9ncnn_jni.cpp
yolov9-ncnn-android/app/src/main/res/values/: strings.xml
yolov9-ncnn-android/gradle/wrapper/: gradle-wrapper.properties
